--- a/res/xml/call_feature_setting.xml
+++ b/res/xml/call_feature_setting.xml
@@ -187,6 +187,12 @@
       android:defaultValue="true"
       android:dependency="bg_incall_screen"/>
 
+  <CheckBoxPreference
+      android:key="button_proximity_key"
+      android:title="@string/proximity_mode_title"
+      android:persistent="false"
+      android:summary="@string/proximity_on_summary" />
+
   <PreferenceScreen
       android:key="button_respond_via_sms_key"
       android:title="@string/respond_via_sms_setting_title"
