--- a/res/values/custom_arrays.xml
+++ b/res/values/custom_arrays.xml
@@ -53,6 +53,7 @@
         <item>Google</item>
         <item>OpenCnam</item>
         <item>WhitePages</item>
+        <item>WhitePages_CA</item>
         <item>YellowPages</item>
         <item>ZabaSearch</item>
     </string-array>
@@ -61,6 +62,7 @@
         <item>Google (Businesses)</item>
         <item>OpenCnam (US)</item>
         <item>WhitePages (US)</item>
+        <item>WhitePages (CA)</item>
         <item>YellowPages (US)</item>
         <item>ZabaSearch (US)</item>
     </string-array>
