(4/4) Telephony: real non intrusive UI
Change-Id: If526634611e4cd6cbeb2d52116bd6c909a39fe75

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -60,4 +60,8 @@
     <string name="bg_incall">Incoming call in background</string>
     <string name="bg_incall_summary">Keep incoming call UI in background when screen is on, show notification and play ringtone only</string>
 
+    <!-- Non intrusive UI -->
+    <string name="non_intrusive_ui">Non intrusive dialog</string>
+    <string name="non_intrusive_ui_summary">Use non intrusive dialog for incoming calls</string>
+
 </resources>
