--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -64,4 +64,41 @@
     <string name="non_intrusive_ui">Non intrusive dialog</string>
     <string name="non_intrusive_ui_summary">Use non intrusive dialog for incoming calls</string>
 
+    <!-- Setting title for dialpad key padding. -->
+    <string name="dialkey_padding_title">Dialpad key padding</string>
+
+    <!-- Dialog title of the dialpad key padding setting. -->
+    <string name="dialkey_padding_dialog_title">Padding for dialpad keys</string>
+
+    <!-- Setting summary for the dialpad key padding setting. -->
+    <string name="dialkey_padding_summary">Amount of padding on top and bottom of dialpad number keys</string>
+
+    <!-- Values for dialpad key padding array entries. -->
+    <string name="entry_0dip">0dip</string>
+    <string name="entry_5dip">5dip</string>
+    <string name="entry_10dip">10dip</string>
+    <string name="entry_15dip">15dip</string>
+    <string name="entry_20dip">20dip</string>
+    <string name="entry_25dip">25dip</string>
+
+    <!-- Values for dialpad key padding. -->
+    <string-array name="dialkey_padding_setting_values" translatable="false">
+        <item>0</item>
+        <item>5</item>
+        <item>10</item>
+        <item>15</item>
+        <item>20</item>
+        <item>25</item>
+    </string-array>
+
+    <!-- Entries listed in the setting for dialkey padding. -->
+    <string-array name="dialkey_padding_setting_entries">
+        <item>@string/entry_0dip</item>
+        <item>@string/entry_5dip</item>
+        <item>@string/entry_10dip</item>
+        <item>@string/entry_15dip</item>
+        <item>@string/entry_20dip</item>
+        <item>@string/entry_25dip</item>
+    </string-array>
+
 </resources>
