--- a/res/xml/call_feature_setting.xml
+++ b/res/xml/call_feature_setting.xml
@@ -173,6 +173,14 @@
       android:entryValues="@array/incoming_call_style_values"
       android:persistent="false" />
 
+  <ListPreference
+      android:key="dialkey_padding"
+      android:title="@string/dialkey_padding_title"
+      android:dialogTitle="@string/dialkey_padding_dialog_title"
+      android:entries="@array/dialkey_padding_setting_entries"
+      android:entryValues="@array/dialkey_padding_setting_values"
+      android:persistent="false" />
+
   <CheckBoxPreference
       android:key="bg_incall_screen"
       android:title="@string/bg_incall"
