add missing summary for dialpad key padding
Change-Id: I32aa8e418069ec21cf5c14d1dfaa5f7396b93dcf

--- a/res/xml/call_feature_setting.xml
+++ b/res/xml/call_feature_setting.xml
@@ -159,6 +159,7 @@
   <ListPreference
       android:key="dialkey_padding"
       android:title="@string/dialkey_padding_title"
+      android:summary="@string/dialkey_padding_summary"
       android:dialogTitle="@string/dialkey_padding_dialog_title"
       android:entries="@array/dialkey_padding_setting_entries"
       android:entryValues="@array/dialkey_padding_setting_values"
